# trabajoCAR

./: .gitignore  README.md
Task0/: Makefile  async  async_functions.cpp  deferred  deferred_functions.cpp  initialize  initialize_vectors.cpp  initialize_vectors.cpp.bak  suma  suma_vectores_float.cpp
Task1/src/: CMakeLists.txt  main.cc
Task1/src/utils/: CMakeLists.txt  dct.h  image.cc  image.h
Task1Paralelizada/: CMakeLists.txt
Task1Paralelizada/src/: CMakeLists.txt  main.cc
Task1Paralelizada/src/utils/: CMakeLists.txt  dct.cc
